tests/snapshots/parser_fixtures__01_single_success.snap
---
source: tests/parser_fixtures.rs
expression: summary.snapshot()
---
sessions: 1
user_messages: 1
assistant_messages: 1
commands: 1
passing_verification_commands: 1
failed_verification_commands: 0
pass_proof_facts: 1
fail_proof_facts: 0
resolved_failures: 0
unresolved_failures: 0
approvals: 0
approved_actions: 0
sandbox_approval_events: 0
risk_facts: 0
friction_facts: 0
file_changes: 0
total_lines_added: 0
total_lines_deleted: 0
risky_path_facts: 0
docs_low_risk_paths: 0
decision: READY
changed_paths: []
